@@ -1,6 +1,14 @@
 Changes in b52:
+Fixes:
+[ geneontology-Bugs-2384240 ] user defined dictionary
+[ geneontology-Bugs-2384194 ] Verification Manager checks
+Provision to save vocabulary to a user-defined (user.dict) or the standard system (standard.dict i.e GO) dictionary.
+Users with existing domain-specific dictionaries can add it to their config folder and will have to follow the standard naming convention - "user.dict" (for now - I understand users would like freedom to name their dictionaries and maybe even load multiple dictionaries).
+Users without personal dictionaries will have the option to build one over the standard (GO) dictionary while editing.
 
-[ 2207440 ] Tree Viewer - displays default tree
+On a clean beta install or on getting rid of the entire config folder the Verification Manager will work right off the bat. On existing beta installations the dictionary files in the config folder will have to be updated through the Configuration Manager which will have the following new options "Update standard system dictionaries" and "Backup user-defined dictionary" which lets the user save their dictionary to a separate location.
+
+[2207440 ] Tree Viewer - displays default tree
 On startup, the Tree Viewer displayed the default java sports and food ontology
 if no other term was selected in any component on global 
 selection mode. Now, in these circumstances, nothing is displayed. 
